i have added another h2 tag

--- a/LessonStatic/index.html
+++ b/LessonStatic/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello World! here is changing</h1>
+    <h2>this is changes is applying inside dev branch.</h2>
 </body>
 </html>
